@@ -22,6 +22,12 @@
  * Return a SendPackResult object from
    GitClient.send_pack(). (Jelmer Vernooĳ)
 
+ * ``GitClient.send_pack`` now sets the ``ref_status`` attribute
+   on its return value to a dictionary mapping ref names
+   to error messages. Previously, it raised UpdateRefsError
+   if any of the refs failed to update.
+   (Jelmer Vernooĳ, #780)
+
 0.20.3	2020-06-14
 
  * Add support for remembering remote refs after push/pull.
